# glyde

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  deny.toml  rust-toolchain.toml
.claude/: settings.json
.claude/commands/: bootstrap-roadmap.md  next.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  file-wont-open.yml  performance.yml  release.yml
.github/workflows/: ci.yml  release.yml
crates/glyde-app/: Cargo.toml
crates/glyde-app/src/: app.rs  error_boundary.rs  logging.rs  main.rs
crates/glyde-app/src/plumbing/: mod.rs
crates/glyde-app/src/views/: mod.rs  time.rs
crates/glyde-app/src/views/snapshots/: glyde__views__time__render_tests__time_domain_view_shape_count.snap
crates/glyde-core/: Cargo.toml
crates/glyde-core/benches/: index_build.rs  viewport_query.rs  welch.rs
crates/glyde-core/src/: error.rs  lib.rs
crates/glyde-core/src/dsp/: decimation.rs  detrend.rs  mod.rs  welch.rs  window.rs
crates/glyde-core/src/ingest/: csv.rs  dataset.rs  infer.rs  mod.rs  report.rs
crates/glyde-core/src/series/: anomaly.rs  dtype.rs  mod.rs
crates/glyde-core/src/time/: format.rs  gap.rs  mod.rs  monotonic.rs
crates/glyde-core/tests/: corpus_manifest.rs  corpus_open_compare.rs  golden.rs  property.rs  series_corpus.rs
crates/glyde-core/tests/golden/: decimation.rs  time.rs  welch.rs
crates/glyde-core/tests/support/: mod.rs
crates/glyde-devtools/: Cargo.toml
docs/: .license-header.txt  ARCHITECTURE.md  PRODUCT.md  QUALITY.md  ROADMAP.md  ROUTINES.md  SPEC.md
testdata/corpus/: README.md  case-01-comma-clean.csv  case-02-semicolon-comma-decimal.csv  case-02-semicolon-comma-decimal.expected.json  case-03-tab-delimited.expected.json  case-03-tab-delimited.tsv  case-04-whitespace-aligned.expected.json  case-04-whitespace-aligned.txt  case-05-pipe-delimited.csv  case-05-pipe-delimited.expected.json  case-06-quoted-field-with-delimiter.csv  case-07-quoted-field-with-newline.csv  case-08-latin1-degree-micro.csv  case-09-windows1252-smart-quotes.csv  case-09-windows1252-smart-quotes.expected.json  case-10-utf8-bom.csv  case-11-utf16le.csv  case-11-utf16le.expected.json  case-12-invalid-byte-sequences.csv  case-13-unit-suffix-header.csv  case-13-unit-suffix-header.expected.json  case-14-metadata-preamble.csv  case-14-metadata-preamble.expected.json  case-15-no-header.csv  case-15-no-header.expected.json  case-16-duplicate-column-names.csv  case-17-empty-columns.csv  case-18-single-column.csv  case-18-single-column.expected.json  case-19-single-data-row.csv  case-19-single-data-row.expected.json  case-20-trailing-empty-lines.csv  case-21-ragged-rows.csv  case-21-ragged-rows.expected.json  case-22-truncated-final-line.csv  case-22-truncated-final-line.expected.json  case-23-empty-file.expected.json  case-24-iso8601-with-timezone.csv  case-25-iso8601-naive.csv  case-25-iso8601-naive.expected.json  (+49 more)
testdata/corpus/case-55-partitioned-parquet-directory/date=2026-01-01/: part-0.parquet
testdata/corpus/case-55-partitioned-parquet-directory/date=2026-01-03/: part-0.parquet
