[package]
name = "glyde-core"
description = "Glyde engine: ingestion, time indexing, multi-resolution index, and DSP. No GUI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

# HARD RULE (docs/ARCHITECTURE.md §Hard rules, enforced by CI "Architecture guard"):
# this crate must NEVER depend on eframe, egui, wgpu, winit, or any windowing
# crate. All product logic lives here so it can be tested headlessly.
[dependencies]
csv.workspace = true
csv-core.workspace = true
parquet.workspace = true
arrow.workspace = true
memmap2.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true

chrono.workspace = true
chrono-tz.workspace = true

rustfft.workspace = true
rayon.workspace = true

tracing.workspace = true
thiserror.workspace = true
sysinfo.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
insta.workspace = true
approx.workspace = true
tempfile.workspace = true

# On by default (docs/ROADMAP.md M2 "Activate corpus open→compare gate"):
# gates crates/glyde-core/tests/corpus_open_compare.rs, which runs
# `ingest::inspect()` against every implemented-so-far torture-corpus case and
# compares the result field-by-field against its `<name>.expected.json`,
# instead of only validating the JSON's shape (that part is
# tests/corpus_manifest.rs's job, unconditionally). Kept as an explicit
# feature rather than an unconditional test so a future PR can flip it off
# again if a not-yet-implemented format needs to land without immediately
# satisfying the gate for every one of its cases.
[features]
default = ["corpus-open-compare"]
corpus-open-compare = []

# Golden DSP tests (docs/QUALITY.md §2). These are written BEFORE the
# implementation and are never edited to make code pass.
[[bench]]
name = "index_build"
harness = false

[[bench]]
name = "viewport_query"
harness = false

[[bench]]
name = "welch"
harness = false
